# docuforce

./: .gitignore  Cargo.toml  README.md
src/: assistant.rs  cache.rs  main.rs  parser.rs  types.rs
src/migrations/: cache_1.sql
src/prompts/: function_instructions.txt
src/queries/: rust.scm
