[package]
name = "docuforce"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1.9"
async-openai = "0.25"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version =  "0.3.18",  features = ["env-filter"]}
futures = "0.3.30"
clap = { version = "4.5.18", features = ["derive"] }
