[package]
name = "docuforce"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1.9"
async-openai = "0.25"
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version =  "0.3.18",  features = ["env-filter"]}
futures = "0.3.30"
clap = { version = "4.5.18", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
colored = "2.1.0"
